cargo-features = ["strip"]

[package]
name = "esp32-ledstrip"
version = "0.1.0"
authors = ["Anthony Canino <git@anthonycanino.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1


[profile.dev]
debug = 1 # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp-idf-sys/native"]

[dependencies]
embedded-hal = "^0.2.6"
embedded-svc = "^0.16.2"
esp-idf-hal = "^0.32.2"
esp-idf-sys = { version = "^0.30.1", features = ["binstart"] }
anyhow = "^1.0.52"
num = "^0.4.0"


[build-dependencies]
embuild = "^0.28.0"
anyhow = "^1"
